// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: TagSelect rendering works with minimum props 1`] = `null`;

exports[`Component: TagSelect rendering works with only items 1`] = `
<div
  className="nice-dropdown nice-form-control"
>
  <button
    className="nice-btn"
    disabled={false}
    onClick={[Function]}
  >
    Add...
    <i
      className="icon fa-angle-down"
    />
  </button>
  <ul
    className="dropdown-menu"
    onClick={[Function]}
  >
    <li
      className={null}
      data-value={1}
      onClick={[Function]}
    >
      <a>
        one
      </a>
    </li>
    <li
      className={null}
      data-value={2}
      onClick={[Function]}
    >
      <a>
        Two
      </a>
    </li>
    <li
      className={null}
      data-value="three"
      onClick={[Function]}
    >
      <a>
        three
      </a>
    </li>
  </ul>
</div>
`;

exports[`Component: TagSelect rendering works with some selected 1`] = `
<div
  className="nice-dropdown nice-form-control"
>
  <button
    className="nice-btn"
    disabled={false}
    onClick={[Function]}
  >
    Add...
    <i
      className="icon fa-angle-down"
    />
  </button>
  <ul
    className="dropdown-menu"
    onClick={[Function]}
  >
    <li
      className={null}
      data-value={1}
      onClick={[Function]}
    >
      <a>
        one
      </a>
    </li>
    <li
      className={null}
      data-value="three"
      onClick={[Function]}
    >
      <a>
        three
      </a>
    </li>
  </ul>
</div>
`;
